crates/knf/tests/snapshots/cli__ambiguous_group_error.snap
---
source: crates/knf/tests/cli.rs
expression: "run_err(&dir, &[\"matrix\", \"config/\"])"
---
error: ambiguous group `db` — 2 alternatives
  db=mysql, db=postgres
ambiguous group `server` — 2 alternatives
  server=apache, server=nginx
help: knf matrix config/ db=mysql server=apache
help: or write every combination — knf matrix config/ --out-dir out/
