crates/knf/tests/snapshots/cli__cascade_directory_target.snap
---
source: crates/knf/tests/cli.rs
expression: "run_err(&dir, &[\"-r\", \"foo/directory.toml\"])"
---
error: `foo/directory.toml` is not a regular file
