crates/knf/tests/snapshots/cli__conflicting_rules_error.snap
---
source: crates/knf/tests/cli.rs
expression: forward
---
error: conflicting strategies at `db`: `append` and `replace`
help: a path may be named by only one of --append, --replace and --fail
