crates/knf/tests/snapshots/cli__context_directory_error.snap
---
source: crates/knf/tests/cli.rs
expression: "run_err(&dir, &[\"a.json\", \"-i\", \"--with\", \"config\"])"
---
error: `config` is a directory; knf takes files as layers
help: --with takes one file
