crates/knf/tests/snapshots/cli__directory_in_the_default_command_error.snap
---
source: crates/knf/tests/cli.rs
expression: "run_err(&dir, &[\"config\"])"
---
error: `config` is a directory; the default command takes files as layers
help: `knf matrix config` reads it as config groups, or `knf config/*.toml` merges its files as layers
